--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@genkit-ai/core": "^1.27.0",
+    "@genkit-ai/firebase": "^1.27.0",
+    "@genkit-ai/googleai": "^1.27.0",
+    "genkit": "^1.27.0",
     "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -20,9 +24,9 @@
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.2.0",
     "eslint": "^8.52.0",
     "eslint-config-next": "14.0.0",
+    "typescript": "^5.2.0",
     "vitest": "^1.0.0"
   }
 }
